--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,22 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  /* background-color:#444; */
   font-size: 18px;
+  background-image: url(https://media.giphy.com/media/3oxHQERYBueKZdAb9m/giphy.gif);
+  background-size: 100% 100%;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+
+.title, .addDancerButton, .sponge, .guy {
   padding:5px 12px;
   float:right;
 }
+
 .topbar{
+  margin: -2px;
   height:32px;
   background-color: #555;
 }
@@ -24,4 +29,12 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+.dancingGuy{
+  height: 300px;
+}
+
+.dancingSponge{
+  width: 300px;
 }
